# events_aggregator

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: lint.yml
src/: settings.py  urls.py
src/apps/events/: admin.py  apps.py  models.py  paginator.py  registration.py  serializers.py  tasks.py  urls.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_syncstate.py
src/apps/events/services/: events_provider_client.py
src/apps/events/tests/: test_client.py  test_paginator.py  test_registration.py  test_views.py
src/core/: celery.py  settings.py  urls.py
