[project]
name = "events-aggregator"
version = "0.1.0"
description = "Events aggregator service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django==4.2.18",
    "djangorestframework==3.15.2",
    "celery==5.4.0",
    "redis==5.0.3",
    "psycopg2-binary==2.9.10",
    "django-environ",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "ruff==0.8.4",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
