[project]
name = "events-aggregator"
version = "0.1.0"
description = "Events aggregator service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django==4.2.18",
    "djangorestframework==3.15.2",
    "celery==5.4.0",
    "psycopg2-binary==2.9.10",
    "django-environ==0.13.0",
    "gunicorn==23.0.0",
    "httpx>=0.27.0",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.5.1",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

